Bug 3073 pendingtask (#1761)
* fix errors for pending task update

* update test cases